# lcdp-inventorist-app

./: .env  .gitignore  README.md  app.spec  codegen.py  config.json.tpl  jfrog-requirements.txt  main.py  playground.py  prepare.py  private-requirements.txt  pyproject.toml  requierements.txt  requirements.txt  settings.py
.github/workflows/: back-merge.yml  execute-test.yml  package-app.yml  perform-release.yml  pre-release.yml  release.yml  snapshot.yml  test.yml
.jfrog/projects/: pip.yaml
backend/: app.py  login.py
business/: actions.py  constant.py  exceptions.py  my_python_class.py  utils.py
business/factories/: excel_factory.py  excel_lines_factory.py  receipts.py
business/mappers/: api_error.py  assembly_mapper.py  excel_lines_mapper.py  excel_mapper.py  sale_offer.py
business/models/: column.py  errors.py  excel_line.py  excel_parameter.py  laboratory.py  product.py  sale_offer.py  stock.py  supervisor.py  update_policy.py
business/services/: assembly.py  authentication.py  catalog.py  excel.py  executor.py  import_sale_offer.py  laboratory.py  product.py  providers.py  sale_offer.py  security.py  settings.py  user.py  vat.py
packaging/macos/: LISEZ-MOI.txt  install.command
qml/: app.qml  login.qml
qml/models/: assembly_table_model.py
tests/: constant.py  utils.py
tests/business/: test_utils.py
tests/business/models/: test_laboratory.py  test_product.py  test_sale_offer.py  test_stock.py
tests/mappers/: test_excel_lines_factory.py  test_excel_lines_mapper.py
tests/mappers/resources/: expected_drugstore_excel_lines_mapper.json  expected_laboratory_excel_lines_builder.json  expected_laboratory_excel_lines_mapper.json  expected_product_excel_lines_mapper.json
tests/resources/: import_produit.xlsx  integration_annonce_laboratoire.xlsx  integration_annonce_pharmacie.xlsx
tests/services/: test_excel.py  test_laboratory.py  test_product.py  test_sale_offer.py  test_vat.py
tests/services/resources/: expected_drugstore_sale_offer.json  expected_laboratory_sale_offer.json
